added 0.7.0 build info

--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -181,7 +181,7 @@
 						<div class="dotted-line border-l-2 border-dotted border-gray-300 dark:border-gray-600 h-[4.5rem]"></div>
 					</div>
 
-					<!-- COPY for latest release -->
+					<!-- latest release -->
 					<div class="flex flex-col items-center">
 						<!-- yellow circle -->
 						<div class="h-3 w-3 rounded-full border-2 border-solid border-yellow-500"></div>
@@ -190,6 +190,14 @@
 					</div>
 
 					<!-- COPY for past releases -->
+					<div class="flex flex-col items-center">
+						<!-- circle -->
+						<div class="h-3 w-3 rounded-full border-2 border-solid border-gray-400 dark:border-gray-400"></div>
+						<!-- vertical line *REMOVE HIDDEN -->
+						<div class="changelog-ruler h-10 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
+					</div>
+
+					<!-- past releases -->
 					<div class="flex flex-col items-center">
 						<!-- circle -->
 						<div class="h-3 w-3 rounded-full border-2 border-solid border-gray-400 dark:border-gray-400"></div>
@@ -258,7 +266,7 @@
 				<div class="flex flex-col">
 					<div class="h-20"><p class="text-sm">More new features are under development...</p></div>
 
-					<!-- 0.6.2 -->
+					<!-- 0.7.0 -->
 					<!-- copy for latest release -->
 					<article class="changelog-text pb-8">
 						<!-- latest release text -->
@@ -267,8 +275,42 @@
 							<div class="flex flex-col">
 								<!-- version and date -->
 								<div class="flex space-x-5 items-center pb-2">
-									<h2 class="text-yellow-500 font-medium text-xl">0.6.2</h2>
-									<p class="text-sm">(29-Aug-2021)</p>
+									<h2 class="text-yellow-500 font-medium text-xl">0.7.0</h2>
+									<p class="text-sm">(x-09-2021)</p>
+								</div>
+
+								<!-- release notes -->
+								<div>
+									<ul class="text-sm space-y-2">
+										<li>In-game native controller support ( you don’t need to setup anything, just connect controller as on your iPhone)</li>
+										<li>Game controller key mapping for games, that don’t support gamepads</li>
+										<li>Fixed bug with mouse reset on Burst(Ultimate) in Genshin</li>
+										<li>More smooth mouse movement</li>
+										<li>Fixed improper scaling in Windowed mode</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+
+						<!-- line divide -->
+						<div class="border-t w-[100%] border-gray-300 dark:border-gray-600 my-3 mb-5"></div>
+
+						<!-- github release button -->
+						<a href="https://github.com/Letscoder/PlayCover/releases/tag/0.6.2" class="bg-gray-800 rounded text-sm text-gray-200 dark:text-gray-300 px-3 py-2" target="_blank">GitHub Release</a>
+					</article>
+
+					<!-- 0.6.2 -->
+					<!-- copy for past releases -->
+					<article class="changelog-text pb-8">
+						<!-- release text -->
+						<div class="flex flex-col">
+							<!-- each release -->
+							<div class="flex flex-col">
+								<!-- version and date -->
+								<!-- version and date -->
+								<div class="flex space-x-5 items-center pb-2">
+									<h2 class="font-medium text-xl">0.6.2</h2>
+									<p class="text-sm">(29-08-2021)</p>
 								</div>
 
 								<!-- release notes -->
@@ -308,7 +350,7 @@
 								<!-- version and date -->
 								<div class="flex space-x-5 items-center pb-2">
 									<h2 class="font-medium text-xl">0.6.1</h2>
-									<p class="text-sm">(22-Aug-2021)</p>
+									<p class="text-sm">(22-08-2021)</p>
 								</div>
 
 								<!-- release notes -->
@@ -339,7 +381,7 @@
 								<!-- version and date -->
 								<div class="flex space-x-5 items-center pb-2">
 									<h2 class="font-medium text-xl">0.6.0</h2>
-									<p class="text-sm">(22-Aug-2021)</p>
+									<p class="text-sm">(22-08-2021)</p>
 								</div>
 
 								<!-- release notes -->
@@ -380,7 +422,7 @@
 								<!-- version and date -->
 								<div class="flex space-x-5 items-center pb-2">
 									<h2 class="font-medium text-xl">0.5.0</h2>
-									<p class="text-sm">(12-Aug-2021)</p>
+									<p class="text-sm">(12-08-2021)</p>
 								</div>
 
 								<!-- release notes -->
@@ -411,7 +453,7 @@
 								<!-- version and date -->
 								<div class="flex space-x-5 items-center pb-2">
 									<h2 class="font-medium text-xl">0.4.0</h2>
-									<p class="text-sm">(10-Aug-2021)</p>
+									<p class="text-sm">(10-08-2021)</p>
 								</div>
 
 								<!-- release notes -->
@@ -445,7 +487,7 @@
 								<!-- version and date -->
 								<div class="flex space-x-5 items-center pb-2">
 									<h2 class="font-medium text-xl">0.1.1</h2>
-									<p class="text-sm">(09-Aug-2021)</p>
+									<p class="text-sm">(09-08-2021)</p>
 								</div>
 
 								<!-- release notes -->
@@ -477,7 +519,7 @@
 								<!-- version and date -->
 								<div class="flex space-x-5 items-center pb-2">
 									<h2 class="font-medium text-xl">0.1.0-fix</h2>
-									<p class="text-sm">(06-Aug-2021)</p>
+									<p class="text-sm">(06-08-2021)</p>
 								</div>
 
 								<!-- release notes -->
@@ -510,7 +552,7 @@
 								<!-- version and date -->
 								<div class="flex space-x-5 items-center pb-2">
 									<h2 class="font-medium text-xl">0.1.0-beta</h2>
-									<p class="text-sm">(05-Aug-2021)</p>
+									<p class="text-sm">(05-08-2021)</p>
 								</div>
 
 								<!-- release notes -->
@@ -542,7 +584,7 @@
 								<!-- version and date -->
 								<div class="flex space-x-5 items-center pb-2">
 									<h2 class="font-medium text-xl">0.0.2-alpha</h2>
-									<p class="text-sm">(04-Aug-2021)</p>
+									<p class="text-sm">(04-08-2021)</p>
 								</div>
 
 								<!-- release notes -->
