--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -207,11 +207,20 @@
 
 					<!-- answer -->
 					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
-                        <p class="pl-3 mb-10 border-l-4 rounded-sm border-yellow-500">Last updated for version 0.6.0b4.</p>
+                        <p class="pl-3 mb-10 border-l-4 rounded-sm border-yellow-500">Last updated for version 0.7.0</p>
                         
 						<ul class="list-inside list-disc">
                             <h2 class="text-xl font-bold">Keymapper Toggle</h2>
                             <li class=""><kbd>CTRL + P</kbd>&nbsp; →&nbsp; Toggle keymapping mode</li>
+
+                            <br>
+
+                             <h2 class="text-xl font-bold">Controller Guide:</h2>
+                            <li class=""><kbd>CTRL + N</kbd> and then <kbd>Shift + A,X,B,Y</kbd> </li>
+                            <li class=""><kbd>Shift + 1,2,3,4</kbd> for Dpad</li>
+                            <li class=""><kbd>Shift + 5,6,7,8</kbd> for L1,L2,R1,R2</li>
+                            <li class=""><kbd>Shift + 9</kbd> for Left Stick</li>
+                            <li class=""><kbd>Ctrl + M</kbd> for Right Stick</li>
 
                             <br>
 
