--- a/public/index.html
+++ b/public/index.html
@@ -193,21 +193,14 @@
 					<!-- build text -->
 					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17rem] w-[27.5rem] cursor-default border-2 dark:border-[#303030] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
 						<div class="mt-6 mb-[24px] ml-8 mr-2 pr-4 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#444444] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
-							<h2 class="font-medium text-lg pb-4">Latest Update Info (0.6.3)</h2>
+							<h2 class="font-medium text-lg pb-4">Latest Update Info (0.7.0)</h2>
 
 							<ul class="text-sm space-y-4">
-								<li>Keymapping elements will resize on window size change</li>
-								<li>Special indicator will be shown on entering and leaving editor mode</li>
-								<li>All parent UIViews scale properly (web announcements inside Genshin Impact are fixed, some games as such as Genshin Impact currently require restarting for proper scale after window change)</li>
-								<li>Fixed MenuBar that covered game window in Windowed mode</li>
-								<li>Resolved problem of not saving key mappings for some users</li>
-								<li>Fixed crash on entering party menu in Genshin Impact for some users</li>
-								<li>Improved graphics in 3x times</li>
-								<li>Total average memory usage by games decreased by x2 times</li>
-								<li>Fixed problem when camera movement vanished after cutscene</li>
-								<li>Camera now properly appears after mapping without additional manipulations</li>
-								<li>Now PlayCover contains automated crashes report system, which works not only inside app, but also every game converted with PlayCover</li>
-								<li>Started migrate games settings to PlayCover for syncing and easily management</li>
+								<li>In-game native controller support (you don’t need to setup anything, just connect controller as on your iPhone)</li>
+								<li>Game controller key mapping for games, that don’t support gamepads</li>
+								<li>Fixed bug with mouse reset on Burst(Ultimate) in Genshin Impact</li>
+								<li>More smooth mouse movement</li>
+								<li>Fixed improper scaling in Windowed mode</li>
 							</ul>
 						</div>
 					</div>
