--- a/public/index.html
+++ b/public/index.html
@@ -192,7 +192,7 @@
 
 					<!-- build text -->
 					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17rem] w-[27.5rem] cursor-default border-2 dark:border-[#303030] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
-						<div class="mt-6 mb-[24px] ml-8 mr-2 pr-4 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#444444] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
+						<div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#444444] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
 							<h2 class="font-medium text-lg pb-4">Latest Update Info (0.7.0)</h2>
 
 							<ul class="text-sm space-y-4">
@@ -209,14 +209,15 @@
 				<!-- hero image -->
 				<div id="hero-image">
 					<div class="relative">
-						<div class="absolute dark:hidden animate-blob opacity-30 dark:opacity-5 mix-blend-multiply filter blur-xl top-10 -left-4 rounded-full bg-purple-300 h-56 w-56 md:h-[20rem] md:w-[20rem]"></div>
+						<div class="absolute animate-blob opacity-25 dark:opacity-5 mix-blend-multiply filter blur-xl top-10 -left-4 rounded-full bg-purple-300 h-56 w-56 md:h-[20rem] md:w-[20rem]"></div>
 
-						<div class="absolute dark:hidden overflow-hidden animate-blob animation-delay-2000 opacity-30 dark:opacity-5 mix-blend-multiply filter blur-xl rounded-full top-10 md:top-20 right-20 md:-right-2 bg-yellow-300 h-56 w-56 md:h-[20rem] md:w-[20rem]"></div>
+						<div class="absolute overflow-hidden animate-blob animation-delay-2000 opacity-25 dark:opacity-5 mix-blend-multiply filter blur-xl rounded-full top-10 md:top-20 right-20 md:-right-2 bg-yellow-300 h-56 w-56 md:h-[20rem] md:w-[20rem]"></div>
 
-						<div class="absolute dark:hidden overflow-hidden animate-blob animation-delay-4000 opacity-30 dark:opacity-5 mix-blend-multiply -bottom-7 left-4 filter blur-xl rounded-full bg-pink-300 h-56 w-56 md:h-[20rem] md:w-[20rem]"></div>
+						<div class="absolute overflow-hidden animate-blob animation-delay-4000 opacity-25 dark:opacity-5 mix-blend-multiply -bottom-7 left-4 filter blur-xl rounded-full bg-pink-300 h-56 w-56 md:h-[20rem] md:w-[20rem]"></div>
 
-						<img class="dark:hidden max-w-xs md:max-w-[27rem] rounded-lg drop-shadow-md" src="assets/playcover-screenshot-light.png" alt="genshin-impact" />
-						<img class="hidden dark:block max-w-xs md:max-w-[27rem] rounded-lg drop-shadow-md" src="assets/playcover-screenshot-dark.png" alt="genshin-impact" />
+						<img class="hero-image dark:hidden z-10 max-w-xs md:max-w-[27rem] rounded-lg drop-shadow hover:drop-shadow-2xl transition duration-700 ease-in-out" src="assets/playcover-screenshot-light.png" alt="genshin-impact" />
+
+						<img class="hero-image hidden z-10 dark:block max-w-xs md:max-w-[27rem] rounded-lg drop-shadow hover:drop-shadow-2xl transition duration-700 ease-in-out" src="assets/playcover-screenshot-dark.png" alt="genshin-impact" />
 					</div>
 				</div>
 			</section>
@@ -340,5 +341,13 @@
 		<script src="js/donate-popup.js"></script>
 		<script src="js/auto-closer.js"></script>
 		<script src="js/animator.js"></script>
+		<script src="js/vanilla-tilt-min.js"></script>
+		<script>
+			VanillaTilt.init(document.querySelectorAll(".hero-image"), {
+				reverse: true,
+				max: 10,
+				speed: 400,
+			});
+		</script>
 	</body>
 </html>
