removed blobs and tilting

--- a/public/index.html
+++ b/public/index.html
@@ -209,15 +209,9 @@
 				<!-- hero image -->
 				<div id="hero-image">
 					<div class="relative">
-						<div class="absolute animate-blob opacity-20 dark:opacity-5 mix-blend-multiply filter blur-xl top-10 -left-4 rounded-full bg-purple-300 h-56 w-56 md:h-[20rem] md:w-[20rem]"></div>
+						<img class="dark:hidden z-10 max-w-xs md:max-w-[27rem] rounded-lg shadow hover:shadow-xl transition ease-out duration-700 transform hover:scale-105" src="assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
 
-						<div class="absolute overflow-hidden animate-blob animation-delay-2000 opacity-20 dark:opacity-5 mix-blend-multiply filter blur-xl rounded-full top-10 md:top-20 right-20 md:-right-2 bg-yellow-300 h-56 w-56 md:h-[20rem] md:w-[20rem]"></div>
-
-						<div class="absolute overflow-hidden animate-blob animation-delay-4000 opacity-20 dark:opacity-5 mix-blend-multiply -bottom-7 left-4 filter blur-xl rounded-full bg-pink-300 h-56 w-56 md:h-[20rem] md:w-[20rem]"></div>
-
-						<img class="hero-image dark:hidden z-10 max-w-xs md:max-w-[27rem] rounded-lg drop-shadow-sm hover:drop-shadow-xl transition ease-out duration-700" src="assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
-
-						<img class="hero-image hidden z-10 dark:block max-w-xs md:max-w-[27rem] rounded-lg drop-shadow-sm hover:drop-shadow-xl transition ease-out duration-700" src="assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" />
+						<img class="hidden z-10 dark:block max-w-xs md:max-w-[27rem] rounded-lg shadow hover:shadow-xl transition ease-out duration-700 transform hover:scale-105" src="assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" />
 					</div>
 				</div>
 			</section>
@@ -341,7 +335,5 @@
 		<script src="js/donate-popup.js"></script>
 		<script src="js/auto-closer.js"></script>
 		<script src="js/animator.js"></script>
-		<script src="js/vanilla-tilt-min.js"></script>
-		<script src="js/tilt-config.js"></script>
 	</body>
 </html>
