modified changelog rulers

--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -185,80 +185,74 @@
 					<div class="flex flex-col items-center">
 						<!-- yellow circle -->
 						<div class="h-3 w-3 rounded-full border-2 border-solid border-yellow-500"></div>
-						<!-- vertical line -->
-						<div class="changelog-ruler h-10 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 					</div>
 
 					<!-- COPY for past releases -->
 					<div class="flex flex-col items-center">
+						<!-- vertical line *REMOVE HIDDEN -->
+						<div class="changelog-ruler h-2 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 						<!-- circle -->
 						<div class="h-3 w-3 rounded-full border-2 border-solid border-gray-400 dark:border-gray-400"></div>
-						<!-- vertical line *REMOVE HIDDEN -->
-						<div class="changelog-ruler h-10 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 					</div>
 
-					<!-- past releases -->
+					<!-- COPY for past releases -->
 					<div class="flex flex-col items-center">
+						<!-- vertical line *REMOVE HIDDEN -->
+						<div class="changelog-ruler h-2 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 						<!-- circle -->
 						<div class="h-3 w-3 rounded-full border-2 border-solid border-gray-400 dark:border-gray-400"></div>
-						<!-- vertical line *REMOVE HIDDEN -->
-						<div class="changelog-ruler h-10 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 					</div>
 
-					<!-- past releases circles/lines -->
+					<!-- COPY for past releases -->
 					<div class="flex flex-col items-center">
+						<!-- vertical line *REMOVE HIDDEN -->
+						<div class="changelog-ruler h-2 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 						<!-- circle -->
 						<div class="h-3 w-3 rounded-full border-2 border-solid border-gray-400 dark:border-gray-400"></div>
-						<!-- vertical line *REMOVE HIDDEN -->
-						<div class="changelog-ruler h-10 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 					</div>
 
-					<!-- past releases circles/lines -->
+					<!-- COPY for past releases -->
 					<div class="flex flex-col items-center">
+						<!-- vertical line *REMOVE HIDDEN -->
+						<div class="changelog-ruler h-2 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 						<!-- circle -->
 						<div class="h-3 w-3 rounded-full border-2 border-solid border-gray-400 dark:border-gray-400"></div>
-						<!-- vertical line *REMOVE HIDDEN -->
-						<div class="changelog-ruler h-10 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 					</div>
 
-					<!-- past releases circles/lines -->
+					<!-- COPY for past releases -->
 					<div class="flex flex-col items-center">
+						<!-- vertical line *REMOVE HIDDEN -->
+						<div class="changelog-ruler h-2 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 						<!-- circle -->
 						<div class="h-3 w-3 rounded-full border-2 border-solid border-gray-400 dark:border-gray-400"></div>
-						<!-- vertical line *REMOVE HIDDEN -->
-						<div class="changelog-ruler h-10 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 					</div>
-
-					<!-- past releases circles/lines -->
+					<!-- COPY for past releases -->
 					<div class="flex flex-col items-center">
+						<!-- vertical line *REMOVE HIDDEN -->
+						<div class="changelog-ruler h-2 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 						<!-- circle -->
 						<div class="h-3 w-3 rounded-full border-2 border-solid border-gray-400 dark:border-gray-400"></div>
-						<!-- vertical line *REMOVE HIDDEN -->
-						<div class="changelog-ruler h-10 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 					</div>
-
-					<!-- past releases circles/lines -->
+					<!-- COPY for past releases -->
 					<div class="flex flex-col items-center">
+						<!-- vertical line *REMOVE HIDDEN -->
+						<div class="changelog-ruler h-2 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 						<!-- circle -->
 						<div class="h-3 w-3 rounded-full border-2 border-solid border-gray-400 dark:border-gray-400"></div>
-						<!-- vertical line *REMOVE HIDDEN -->
-						<div class="changelog-ruler h-10 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 					</div>
-
-					<!-- past releases circles/lines -->
+					<!-- COPY for past releases -->
 					<div class="flex flex-col items-center">
+						<!-- vertical line *REMOVE HIDDEN -->
+						<div class="changelog-ruler h-2 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 						<!-- circle -->
 						<div class="h-3 w-3 rounded-full border-2 border-solid border-gray-400 dark:border-gray-400"></div>
-						<!-- vertical line *REMOVE HIDDEN -->
-						<div class="changelog-ruler h-10 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 					</div>
-
-					<!-- past releases circles/lines -->
+					<!-- COPY for past releases -->
 					<div class="flex flex-col items-center">
+						<!-- vertical line *REMOVE HIDDEN -->
+						<div class="changelog-ruler h-2 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 						<!-- circle -->
 						<div class="h-3 w-3 rounded-full border-2 border-solid border-gray-400 dark:border-gray-400"></div>
-						<!-- vertical line *REMOVE HIDDEN -->
-						<div class="hidden changelog-ruler h-10 border-l-2 border-solid border-gray-300 dark:border-gray-600"></div>
 					</div>
 				</aside>
 
