--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
 		<link rel="shortcut icon" type="image/jpg" href="assets/favicon.png" />
 		<script src="js/local-storage-track.js"></script>
 
+		<!-- splide JS -->
+		<link href="css/splide.min.css" rel="stylesheet" />
+		<link href="css/splide-core.min.css" rel="stylesheet" />
+
 		<!-- fonts import -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -217,6 +221,21 @@
 			</section>
 		</main>
 
+		<!-- splide js -->
+		<div class="my-10 flex justify-center">
+			<div class="splide">
+				<div class="splide__track mx-20">
+					<ul class="splide__list">
+						<li class="splide__slide" style="width: 10px"><div class="h-36 flex items-center justify-center rounded-lg shadow w-72 bg-green-300 my-3">Slide 1</div></li>
+						<li class="splide__slide"><div class="h-36 flex items-center justify-center rounded-lg shadow w-72 bg-yellow-300 my-3">Slide 2</div></li>
+						<li class="splide__slide"><div class="h-36 flex items-center justify-center rounded-lg shadow w-72 bg-pink-300 my-3">Slide 3</div></li>
+						<li class="splide__slide"><div class="h-36 flex items-center justify-center rounded-lg shadow w-72 bg-red-300 my-3">Slide 4</div></li>
+						<li class="splide__slide"><div class="h-36 flex items-center justify-center rounded-lg shadow w-72 bg-purple-300 my-3">Slide 5</div></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+
 		<!-- donate popup -->
 		<section class="hidden donate-wrapper donate-popup z-40 fixed w-screen h-screen bg-[rgba(0,0,0,0.7)] dark:bg-[rgba(0,0,0,0.7)]">
 			<!-- modal -->
@@ -344,5 +363,31 @@
 		<script src="js/donate-popup.js"></script>
 		<script src="js/auto-closer.js"></script>
 		<script src="js/animator.js"></script>
+
+		<!-- splide js -->
+		<script src="js/splide.min.js"></script>
+		<script>
+			const config = {
+				type: "loop",
+				perPage: 2,
+				perMove: 1,
+				pagination: false,
+				speed: 1000,
+				width: "85%",
+				easing: "ease",
+				padding: { right: 300 },
+				autoplay: true,
+				interval: 3000,
+				breakpoints: {
+					1500: {
+						perPage: 2,
+					},
+					4000: {
+						perPage: 3,
+					},
+				},
+			};
+			new Splide(".splide", config).mount();
+		</script>
 	</body>
 </html>
