--- a/public/index.html
+++ b/public/index.html
@@ -222,26 +222,43 @@
 		</main>
 
 		<!-- splide js -->
-		<div class="my-10 flex justify-center">
+		<div class="group mt-4 mb-2 flex justify-center">
 			<div class="splide">
-				<div class="splide__track mx-20">
+				<div class="splide__track md:mx-20">
 					<ul class="splide__list">
-						<li class="splide__slide px-10" style="width: 10px">
-							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[90%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
+						<li class="splide__slide px-2 md:px-2" style="width: 10px">
+							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[110%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
 						</li>
 
-						<li class="splide__slide px-10" style="width: 10px">
-							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[90%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
+						<li class="splide__slide px-2 md:px-2" style="width: 10px">
+							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[110%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
 						</li>
 
-						<li class="splide__slide px-10" style="width: 10px">
-							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[90%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
+						<li class="splide__slide px-2 md:px-2" style="width: 10px">
+							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[110%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
 						</li>
 
-						<li class="splide__slide px-10" style="width: 10px">
-							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[90%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
+						<li class="splide__slide px-2 md:px-2" style="width: 10px">
+							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[110%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
 						</li>
 					</ul>
+				</div>
+
+				<div class="splide__arrows bg-green-400">
+					<button class="splide__arrow splide__arrow--prev">
+						<div class="rounded-full group-hover:bg-gray-300 md:group-hover:bg-transparent md:rounded-none text-transparent dark:group-hover:text-gray-400 group-hover:text-gray-800 transition duration-300">
+							<svg xmlns="http://www.w3.org/2000/svg" class="h-20 w-20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+							</svg>
+						</div>
+					</button>
+					<button class="splide__arrow splide__arrow--next">
+						<div class="rounded-full group-hover:bg-gray-300 md:group-hover:bg-transparent md:rounded-none text-transparent dark:group-hover:text-gray-400 group-hover:text-gray-800 transition duration-300">
+							<svg xmlns="http://www.w3.org/2000/svg" class="h-20 w-20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+							</svg>
+						</div>
+					</button>
 				</div>
 			</div>
 		</div>
@@ -382,15 +399,17 @@
 				perPage: 2,
 				perMove: 1,
 				pagination: false,
-				speed: 1000,
-				width: "85%",
+				speed: 800,
+				width: "95%",
 				easing: "ease",
+				arrowPath: "",
 				// padding: { right: 300 },
 				autoplay: true,
-				interval: 2500,
+				interval: 3000,
 				breakpoints: {
 					800: {
 						perPage: 1,
+						width: "95%",
 					},
 					1500: {
 						perPage: 2,
