--- a/public/index.html
+++ b/public/index.html
@@ -213,9 +213,9 @@
 				<!-- hero image -->
 				<div id="hero-image">
 					<div class="relative">
-						<img class="dark:hidden z-10 max-w-xs md:max-w-[27rem] rounded-lg shadow hover:shadow-xl transition ease-out duration-700 transform hover:scale-105" src="assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
+						<img class="dark:hidden z-10 max-w-xs md:max-w-[27rem] rounded-lg shadow md:hover:shadow-xl transition ease-out duration-700 transform md:hover:scale-105" src="assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
 
-						<img class="hidden z-10 dark:block max-w-xs md:max-w-[27rem] rounded-lg shadow hover:shadow-xl transition ease-out duration-700 transform hover:scale-105" src="assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" />
+						<img class="hidden z-10 dark:block max-w-xs md:max-w-[27rem] rounded-lg shadow md:hover:shadow-xl transition ease-out duration-700 transform md:hover:scale-105" src="assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" />
 					</div>
 				</div>
 			</section>
@@ -224,7 +224,8 @@
 		<!-- splide js -->
 		<div class="group mt-4 mb-2 flex justify-center">
 			<div class="splide">
-				<div class="splide__track md:mx-20">
+				<!-- content -->
+				<div class="splide__track md:mx-14">
 					<ul class="splide__list">
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
 							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[110%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
@@ -244,16 +245,17 @@
 					</ul>
 				</div>
 
+				<!-- arrows -->
 				<div class="splide__arrows bg-green-400">
 					<button class="splide__arrow splide__arrow--prev">
-						<div class="rounded-full group-hover:bg-gray-300 md:group-hover:bg-transparent md:rounded-none text-transparent dark:group-hover:text-gray-400 group-hover:text-gray-800 transition duration-300">
+						<div class="rounded-full md:rounded-none text-transparent md:dark:group-hover:text-gray-400 md:group-hover:text-gray-800 transition duration-300">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-20 w-20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
 							</svg>
 						</div>
 					</button>
 					<button class="splide__arrow splide__arrow--next">
-						<div class="rounded-full group-hover:bg-gray-300 md:group-hover:bg-transparent md:rounded-none text-transparent dark:group-hover:text-gray-400 group-hover:text-gray-800 transition duration-300">
+						<div class="rounded-full md:rounded-none text-transparent md:dark:group-hover:text-gray-400 md:group-hover:text-gray-800 transition duration-300">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-20 w-20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
 							</svg>
@@ -400,12 +402,14 @@
 				perMove: 1,
 				pagination: false,
 				speed: 800,
-				width: "95%",
+				width: "100%",
 				easing: "ease",
 				arrowPath: "",
 				// padding: { right: 300 },
 				autoplay: true,
 				interval: 3000,
+				swipeDistanceThreshold: 250,
+				flickVelocityThreshold: 0.1,
 				breakpoints: {
 					800: {
 						perPage: 1,
