--- a/public/index.html
+++ b/public/index.html
@@ -166,7 +166,7 @@
 		<!-- content -->
 		<main>
 			<!-- hero section -->
-			<section id="hero-content" class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-36 pt-28 pb-10 lg:mt-auto">
+			<section id="hero-content" class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-36 3xl:space-x-54 pt-28 pb-10 lg:mt-auto">
 				<!-- text -->
 				<div id="hero-text" class="flex flex-col space-y-6">
 					<!-- intro text -->
@@ -228,19 +228,19 @@
 				<div class="splide__track md:mx-14">
 					<ul class="splide__list">
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[110%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
+							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
 						</li>
 
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[110%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
+							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
 						</li>
 
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[110%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
+							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
 						</li>
 
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[110%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
+							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
 						</li>
 					</ul>
 				</div>
@@ -398,7 +398,6 @@
 		<script>
 			const config = {
 				type: "loop",
-				perPage: 2,
 				perMove: 1,
 				pagination: false,
 				speed: 800,
@@ -415,11 +414,11 @@
 						perPage: 1,
 						width: "95%",
 					},
-					1500: {
-						perPage: 2,
+					1900: {
+						perPage: 3,
 					},
 					4000: {
-						perPage: 3,
+						perPage: 4,
 					},
 				},
 			};
