added more videos

--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -423,7 +423,7 @@
 								<div>
 									<ul class="text-sm space-y-2">
 										<li>For those apps which currently crashes there is a new checkbox. Now you can export such apps for Sideloadly and then install on Mac</li>
-										<li>iOS support. With Sideloadly, you can also play any game with Mouse & Keyboard support. Just enable them in Assistive Touches menu. Fullscreen is ofc disabled</li>
+										<li>iOS support. With PlayCover, you can also play any game with Mouse & Keyboard support. Just enable them in Assistive Touch menu. Fullscreen is ofc disabled</li>
 										<li>System specific bug fixes</li>
 									</ul>
 								</div>
