--- a/public/index.html
+++ b/public/index.html
@@ -227,20 +227,24 @@
 				<!-- content -->
 				<div class="splide__track md:mx-14">
 					<ul class="splide__list">
+						<!-- genshin video -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
+							<video class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
 						</li>
 
+						<!-- guardians tale video -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
+							<video class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay src="assets/Guardian Tales Official Launch Trailer - Optimised.mp4" type="video/mp4"></video>
 						</li>
 
+						<!-- wildrift video -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
+							<video class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay src="assets/League of Legends_ Wild Rift - Optimised.mp4" type="video/mp4"></video>
 						</li>
 
+						<!-- guardians tale video -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<video class="slide-video rounded-lg shadow-md my-4 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
+							<video class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay src="assets/Guardian Tales Official Launch Trailer - Optimised.mp4" type="video/mp4"></video>
 						</li>
 					</ul>
 				</div>
@@ -403,10 +407,9 @@
 				speed: 800,
 				width: "100%",
 				easing: "ease",
-				arrowPath: "",
 				// padding: { right: 300 },
 				autoplay: true,
-				interval: 3000,
+				interval: 3500,
 				swipeDistanceThreshold: 250,
 				flickVelocityThreshold: 0.1,
 				breakpoints: {
