added copyright claims link in footer

--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -647,10 +647,13 @@
 				<!-- text -->
 				<div class="pt-6 md:pt-0 flex flex-col space-y-1">
 					<!-- logo -->
-					<h1 class="font-medium text-lg bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">A PlayCover Team Product</h1>
+					<h1 class="font-medium text-xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">A PlayCover Team Product</h1>
 
-					<!-- legal notice -->
-					<a href="/legal-notice/" class="underline text-left inline md:pb-0">Legal Notice</a>
+					<!-- legal notice and copyright claim -->
+					<div class="space-x-2">
+						<a href="/legal-notice/" class="underline text-left inline md:pb-0">Legal Notice</a>
+						<a href="mailto:ke@playcover.app" class="underline">Copyright Claims</a>
+					</div>
 				</div>
 
 				<!-- links -->
