--- a/public/index.html
+++ b/public/index.html
@@ -229,22 +229,22 @@
 					<ul class="splide__list">
 						<!-- genshin video -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<video class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4"></video>
+							<video class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay><source src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4" /></video>
 						</li>
 
 						<!-- guardians tale video -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<video class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay src="assets/Guardian Tales Official Launch Trailer - Optimised.mp4" type="video/mp4"></video>
+							<video class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay><source src="assets/Guardian Tales Official Launch Trailer - Optimised.mp4" type="video/mp4" /></video>
 						</li>
 
 						<!-- wildrift video -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<video class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay src="assets/League of Legends_ Wild Rift - Optimised.mp4" type="video/mp4"></video>
+							<video class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay><source src="assets/League of Legends_ Wild Rift - Optimised.mp4" type="video/mp4" /></video>
 						</li>
 
 						<!-- guardians tale video -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<video class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay src="assets/Guardian Tales Official Launch Trailer - Optimised.mp4" type="video/mp4"></video>
+							<video class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay><source src="assets/Guardian Tales Official Launch Trailer - Optimised.mp4" type="video/mp4" /></video>
 						</li>
 					</ul>
 				</div>
