added pictures instead of videos for carousel

--- a/public/index.html
+++ b/public/index.html
@@ -227,24 +227,29 @@
 				<!-- content -->
 				<div class="splide__track md:mx-14">
 					<ul class="splide__list">
-						<!-- genshin video -->
+						<!-- genshin impact -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<video class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay><source src="assets/Genshin Impact - compressed trailer.mp4" type="video/mp4" /></video>
+							<img class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[150%]" src="assets/Genshin-Impact-Cover.jpeg" alt="Genshin Impact Cover" />
 						</li>
 
-						<!-- guardians tale video -->
+						<!-- guardians tale  -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<video class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay><source src="assets/Guardian Tales Official Launch Trailer - Optimised.mp4" type="video/mp4" /></video>
+							<img class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[150%]" src="assets/Guardian-Tales-Cover.jpeg" alt="Genshin Impact Cover" />
 						</li>
 
-						<!-- wildrift video -->
+						<!-- wildrift  -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<video class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay><source src="assets/League of Legends_ Wild Rift - Optimised.mp4" type="video/mp4" /></video>
+							<img class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[150%]" src="assets/WildRift-Cover.jpeg" alt="Genshin Impact Cover" />
 						</li>
 
-						<!-- guardians tale video -->
+						<!-- guardians tale  -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<video class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[90%]" muted loop autoplay><source src="assets/Guardian Tales Official Launch Trailer - Optimised.mp4" type="video/mp4" /></video>
+							<img class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[150%]" src="assets/Guardian-Tales-Cover.jpeg" alt="Genshin Impact Cover" />
+						</li>
+
+						<!-- wildrift  -->
+						<li class="splide__slide px-2 md:px-2" style="width: 10px">
+							<img class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[150%]" src="assets/WildRift-Cover.jpeg" alt="Genshin Impact Cover" />
 						</li>
 					</ul>
 				</div>
@@ -412,7 +417,7 @@
 				easing: "ease",
 				// padding: { right: 300 },
 				autoplay: true,
-				interval: 3500,
+				interval: 3200,
 				swipeDistanceThreshold: 250,
 				flickVelocityThreshold: 0.1,
 				breakpoints: {
