added pictures and covers in carousel

--- a/public/index.html
+++ b/public/index.html
@@ -222,34 +222,33 @@
 		</main>
 
 		<!-- splide js -->
-		<div class="group mt-4 mb-2 flex justify-center">
+		<div class="md:mb-4 flex justify-center">
 			<div class="splide">
 				<!-- content -->
 				<div class="splide__track md:mx-14">
-					<ul class="splide__list">
+					<ul class="h-64 md:h-72 splide__list">
 						<!-- genshin impact -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<img class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[150%]" src="assets/Genshin-Impact-Cover.jpeg" alt="Genshin Impact Cover" />
+							<div class="group relative">
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-64 3xl:w-[150%]" src="assets/genshin-impact-gameplay.jpeg" alt="Genshin Impact gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-64 3xl:w-[150%]" src="assets/genshin-impact-logo.png" alt="Genshin Impact logo image" />
+							</div>
 						</li>
 
-						<!-- guardians tale  -->
+						<!-- guardian tales  -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<img class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[150%]" src="assets/Guardian-Tales-Cover.jpeg" alt="Genshin Impact Cover" />
+							<div class="group relative">
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-64 3xl:w-[150%]" src="assets/guardian-tales-gameplay.png" alt="Guardian Tales gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-64 3xl:w-[150%]" src="assets/Guardian-Tales-Cover.jpeg" alt="Guardian Tales logo image" />
+							</div>
 						</li>
 
-						<!-- wildrift  -->
+						<!-- wild rift -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<img class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[150%]" src="assets/WildRift-Cover.jpeg" alt="Genshin Impact Cover" />
-						</li>
-
-						<!-- guardians tale  -->
-						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<img class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[150%]" src="assets/Guardian-Tales-Cover.jpeg" alt="Genshin Impact Cover" />
-						</li>
-
-						<!-- wildrift  -->
-						<li class="splide__slide px-2 md:px-2" style="width: 10px">
-							<img class="slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-200 shadow-lg my-6 w-[120%] md:w-[100%] 3xl:w-[150%]" src="assets/WildRift-Cover.jpeg" alt="Genshin Impact Cover" />
+							<div class="group relative">
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-64 3xl:w-[150%]" src="assets/wildrift-gameplay.jpeg" alt="League of Legends Wild Rift gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-64 3xl:w-[150%]" src="assets/wildrift-logo.jpeg" alt="League of Legends Wild Rift logo image" />
+							</div>
 						</li>
 					</ul>
 				</div>
@@ -257,14 +256,14 @@
 				<!-- arrows -->
 				<div class="splide__arrows bg-green-400">
 					<button class="splide__arrow splide__arrow--prev">
-						<div class="rounded-full md:rounded-none text-transparent md:dark:group-hover:text-gray-400 md:group-hover:text-gray-800 transition duration-300">
+						<div class="rounded-full md:rounded-none md:dark:text-gray-400 md:text-gray-800 transition duration-300">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-20 w-20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
 							</svg>
 						</div>
 					</button>
 					<button class="splide__arrow splide__arrow--next">
-						<div class="rounded-full md:rounded-none text-transparent md:dark:group-hover:text-gray-400 md:group-hover:text-gray-800 transition duration-300">
+						<div class="rounded-full md:rounded-none md:dark:text-gray-400 md:text-gray-800 transition duration-300">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-20 w-20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
 							</svg>
