--- a/public/index.html
+++ b/public/index.html
@@ -222,11 +222,11 @@
 		</main>
 
 		<!-- splide js -->
-		<div class="md:mb-4 flex justify-center">
+		<div class="flex justify-center">
 			<div class="splide">
 				<!-- content -->
 				<div class="splide__track md:mx-14">
-					<ul class="h-64 md:h-72 splide__list">
+					<ul class="h-64 md:h-80 splide__list">
 						<!-- genshin impact -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
 							<div class="group relative">
@@ -256,7 +256,7 @@
 				<!-- arrows -->
 				<div class="group splide__arrows">
 					<button class="splide__arrow splide__arrow--prev">
-						<div class="bg-yellow-500 h-8 w-9 flex items-center justify-center shadow-lg md:shadow-none md:bg-transparent rounded-full md:rounded-none dark:text-gray-600 text-gray-500 md:dark:group-hover:text-gray-300 md:group-hover:text-gray-900 transition duration-300">
+						<div class="bg-gray-500 dark:bg-yellow-500 h-8 w-9 flex items-center justify-center shadow-lg md:shadow-none md:bg-transparent md:dark:bg-transparent rounded-full md:rounded-none dark:text-gray-600 text-gray-500 md:dark:group-hover:text-gray-300 md:group-hover:text-gray-900 transition duration-300">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-20 w-20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
 							</svg>
