--- a/public/index.html
+++ b/public/index.html
@@ -230,24 +230,32 @@
 						<!-- genshin impact -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
 							<div class="group relative">
-								<img class="relative opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/genshin-impact-gameplay.jpeg" alt="Genshin Impact gameplay image" />
-								<img class="absolute top-[-1.5rem] opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/genshin-impact-logo.png" alt="Genshin Impact logo image" />
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/genshin-impact-gameplay.jpeg" alt="Genshin Impact gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/genshin-impact-logo.png" alt="Genshin Impact logo image" />
 							</div>
 						</li>
 
 						<!-- guardian tales  -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
 							<div class="group relative">
-								<img class="relative opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/guardian-tales-gameplay.png" alt="Guardian Tales gameplay image" />
-								<img class="absolute top-[-1.5rem] opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/Guardian-Tales-Cover.jpeg" alt="Guardian Tales logo image" />
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/guardian-tales-gameplay.png" alt="Guardian Tales gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/Guardian-Tales-Cover.jpeg" alt="Guardian Tales logo image" />
 							</div>
 						</li>
 
 						<!-- wild rift -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
 							<div class="group relative">
-								<img class="relative opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/wildrift-gameplay.jpeg" alt="League of Legends Wild Rift gameplay image" />
-								<img class="absolute top-[-1.5rem] opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/wildrift-logo.jpeg" alt="League of Legends Wild Rift logo image" />
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/wildrift-gameplay.jpeg" alt="League of Legends Wild Rift gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/wildrift-logo.jpeg" alt="League of Legends Wild Rift logo image" />
+							</div>
+						</li>
+
+						<!-- honkai impact 3  -->
+						<li class="splide__slide px-2 md:px-2" style="width: 10px">
+							<div class="group relative">
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/honkai-impact-3-gameplay.jpeg" alt="honkai impact 3 gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="assets/honkai-impact-3-cover.jpeg" alt="honkai impact 3 logo image" />
 							</div>
 						</li>
 					</ul>
